UPDATE mdx pages

--- a/app/products/description/kopi-herbal-ginseng/page.mdx
+++ b/app/products/description/kopi-herbal-ginseng/page.mdx
@@ -1,6 +1,6 @@
 # Kopi Ginseng
 
-![Kopi Ginseng](/assets/kopiMDX/kopiGinseng_removed.png)
+![Kopi Ginseng](/assets/features/kopiHerbalGinseng.jpeg)
 
 Kopi **Ginseng** merupakan salah satu varian unggulan dari **KopiHerbalku**, diracik dari biji kopi robusta pilihan yang dipadukan dengan ekstrak ginseng alami berkualitas tinggi.  
 Herbal ginseng telah dikenal luas sebagai ramuan tradisional untuk meningkatkan energi, stamina, serta menjaga ketahanan tubuh.
@@ -23,5 +23,5 @@ Ketika diseduh, aroma khas kopi berpadu dengan rasa hangat ginseng yang menenang
 
 ## Harga
 
-> **Rp79.000**  
-> (per 1 box isi 10 sachet)
+**Rp79.000**  
+(per 1 box isi 10 sachet)
