--- a/app/products/description/kopi-herbal-gurah/page.mdx
+++ b/app/products/description/kopi-herbal-gurah/page.mdx
@@ -1,6 +1,6 @@
 # Kopi Gurah
 
-![Kopi Gurah](/assets/kopiMDX/kopiGurah_removed.png)
+![Kopi Gurah](/assets/features/kopiHerbalGurah.jpeg)
 
 Kopi Gurah adalah racikan istimewa **KopiHerbalku** yang menggabungkan biji kopi pilihan dengan ramuan herbal gurah alami.  
 Dikenal secara tradisional sebagai pembersih pernapasan, kopi ini cocok bagi mereka yang ingin menjaga kesehatan paru-paru sekaligus tetap menikmati nikmatnya kopi.
@@ -23,5 +23,5 @@ Saat diseduh, aroma kopi berpadu dengan sensasi hangat herbal gurah yang khas, m
 
 ## Harga:
 
-> **Rp79.000**  
-> (per 1 box isi 10 sachet)
+**Rp79.000**  
+(per 1 box isi 10 sachet)
