--- a/app/products/description/kopi-herbal-purwacleng/page.mdx
+++ b/app/products/description/kopi-herbal-purwacleng/page.mdx
@@ -1,6 +1,6 @@
 # Kopi PurwaCleng
 
-![Kopi PurwaCleng](/assets/kopiMDX/kopiPurwaCleng_removed.png)
+![Kopi PurwaCleng](/assets/features/kopiHerbalPurwacleng.jpeg)
 
 Kopi PurwaCleng adalah salah satu varian andalan **KopiHerbalku** yang diracik dari **biji kopi pilihan petik merah** dipadukan dengan **herbal PurwaCleng** berkualitas tinggi.  
 Dikenal secara turun-temurun sebagai ramuan penambah vitalitas, PurwaCleng telah menjadi sahabat pria dan wanita yang ingin menjaga kebugaran tubuh dan stamina optimal.
@@ -23,5 +23,5 @@ Begitu kemasan dibuka, aroma kopi segar berpadu dengan wangi herbal alami langsu
 
 ## Harga:
 
-> **Rp79.000**  
-> (per 1 box isi 10 sachet)
+**Rp79.000**  
+(per 1 box isi 10 sachet)
