--- a/app/products/description/kopi-herbal-rempah/page.mdx
+++ b/app/products/description/kopi-herbal-rempah/page.mdx
@@ -1,6 +1,6 @@
 # Kopi Rempah
 
-![Kopi Rempah](/assets/kopiMDX/kopiRempah_removed.png)
+![Kopi Rempah](/assets/features/kopiHerbalRempah.jpeg)
 
 Kopi Rempah adalah perpaduan kopi pilihan dengan berbagai rempah hangat Nusantara yang menyehatkan.  
 Racikan ini menghadirkan sensasi ngopi khas tradisi lama, penuh aroma rempah yang menenangkan sekaligus menjaga tubuh tetap bugar.
@@ -21,5 +21,5 @@ Racikan ini menghadirkan sensasi ngopi khas tradisi lama, penuh aroma rempah yan
 
 ## Harga:
 
-> **Rp79.000**  
-> (per 1 box isi 10 sachet)
+**Rp79.000**  
+(per 1 box isi 10 sachet)
