--- a/app/products/description/kopi-premium-arabica/page.mdx
+++ b/app/products/description/kopi-premium-arabica/page.mdx
@@ -1,6 +1,6 @@
 # Kopi Arabica
 
-![Kopi Arabica](/assets/kopiMDX/kopiArabica_removed.png)
+![Kopi Arabica](/assets/features/kopiPremiumArabica.jpeg)
 
 Kopi Arabica persembahan **KopiHerbalku** menghadirkan cita rasa khas dari dua gunung.  
 Dengan aroma harum dan rasa halus, kopi ini cocok bagi penikmat kopi premium yang menyukai sensasi lembut namun berkarakter.
@@ -17,5 +17,5 @@ Dengan aroma harum dan rasa halus, kopi ini cocok bagi penikmat kopi premium yan
 
 ## Harga:
 
-> **Rp120.000**  
-> (per 1 box isi 10 sachet)
+**Rp120.000**  
+(per 1 box isi 10 sachet)
