--- a/app/products/description/kopi-premium-luwak-liar/page.mdx
+++ b/app/products/description/kopi-premium-luwak-liar/page.mdx
@@ -1,6 +1,6 @@
 # Kopi Luwak Liar
 
-![Kopi Luwak Liar](/assets/kopiMDX/kopiLuwakLiar_removed.png)
+![Kopi Luwak Liar](/assets/features/kopiPremiumLuwak.jpeg)
 
 Kopi Luwak Liar adalah varian kelas dunia dari **KopiHerbalku**, dihasilkan dari proses alami luwak liar yang hanya memilih biji kopi terbaik.  
 Rasa lembut, aroma kompleks, dan sensasi eksklusif menjadikan kopi ini pilihan utama para pecinta kopi premium.
@@ -17,5 +17,5 @@ Rasa lembut, aroma kompleks, dan sensasi eksklusif menjadikan kopi ini pilihan u
 
 ## Harga:
 
-> **Rp250.000**  
-> (per 1 box isi 10 sachet)
+**Rp250.000**  
+(per 1 box isi 10 sachet)
