--- a/app/products/description/kopi-premium-robusta/page.mdx
+++ b/app/products/description/kopi-premium-robusta/page.mdx
@@ -1,6 +1,6 @@
 # Kopi Robusta
 
-![Kopi Robusta](/assets/kopiMDX/kopiRobusta_removed.png)
+![Kopi Robusta](/assets/features/kopiPremiumRobusta.jpeg)
 
 Kopi Robusta dari **KopiHerbalku** menghadirkan cita rasa khas Negeri Tembakau dengan karakter rasa kuat dan pekat.  
 Cocok bagi penikmat kopi yang menyukai sensasi pahit mantap dengan aroma yang tajam.
@@ -17,5 +17,5 @@ Cocok bagi penikmat kopi yang menyukai sensasi pahit mantap dengan aroma yang ta
 
 ## Harga:
 
-> **Rp70.000**  
-> (per 1 box isi 10 sachet)
+**Rp70.000**  
+(per 1 box isi 10 sachet)
