--- a/app/products/description/kopi-premium-special-blend/page.mdx
+++ b/app/products/description/kopi-premium-special-blend/page.mdx
@@ -1,6 +1,6 @@
 # Kopi Special Blend
 
-![Kopi Special Blend](/assets/kopiMDX/kopiSpecialBlend_removed.png)
+![Kopi Special Blend](/assets/features/kopiPremiumSpecialBlend.jpeg)
 
 Kopi Special Blend adalah racikan **KopiHerbalku** untuk sejuta penikmat kopi, menggabungkan biji kopi pilihan dengan takaran seimbang.  
 Hasilnya adalah rasa harmonis yang nikmat dan bisa dinikmati semua kalangan.
@@ -17,5 +17,5 @@ Hasilnya adalah rasa harmonis yang nikmat dan bisa dinikmati semua kalangan.
 
 ## Harga:
 
-> **Rp90.000**  
-> (per 1 box isi 10 sachet)
+**Rp90.000**  
+(per 1 box isi 10 sachet)
